--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "name": "js-5pf7ig",
   "version": "0.0.0",
   "private": true,
+  "license": "Apache Version 2.0",
+  "engines": {
+    "node": "10"
+  },
+  "scripts": {
+    "start": "firebase serve --only functions:dialogflowFirebaseFulfillment",
+    "deploy": "firebase deploy --only functions:dialogflowFirebaseFulfillment"
+  },
   "dependencies": {
-    "@firebase/util": "^0.2.45",
-    "firebase": "^7.14.1",
-    "firebaseui": "^4.5.0"
+    "@firebase/util": "^0.3.4",
+    "actions-on-google": "^2.13.0",
+    "dialogflow": "^4.0.3",
+    "dialogflow-fulfillment": "^0.6.1",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
+    "firebase-functions": "^3.12.0",
+    "firebaseui": "^4.7.1"
   }
 }
