--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@firebase/util": "^0.3.4",
     "actions-on-google": "^2.13.0",
+    "cors": "^2.8.5",
     "dialogflow": "^4.0.3",
     "dialogflow-fulfillment": "^0.6.1",
     "firebase": "^8.1.2",
     "firebase-admin": "^9.4.1",
     "firebase-functions": "^3.12.0",
-    "firebaseui": "^4.7.1"
+    "firebase-functions-test": "^0.2.3",
+    "firebaseui": "^4.7.1",
+    "node": "^15.3.0"
   }
 }
